# brainmaster-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: read_eeg.rs  read_impedance.rs  scan.rs
src/: device.rs  error.rs  ffi.rs  lib.rs  main.rs  protocol.rs  types.rs
tests/: protocol_tests.rs
