[package]
name = "brainmaster"
version = "0.0.1"
edition = "2021"
description = "Rust library and TUI for BrainMaster Discovery 20/24E EEG amplifiers via bmrcm.dll (Windows) or pure-Rust serial protocol (all OS)"
keywords = ["eeg", "brainmaster", "discovery", "bci", "serial"]
authors = ["Eugene Hauptmann"]
license-file = "LICENSE"
homepage = "https://github.com/eugenehp/brainmaster-rs"
repository = "https://github.com/eugenehp/brainmaster-rs"
documentation = "https://docs.rs/brainmaster"
readme = "README.md"

[features]
default = ["tui"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
]

[lib]
name = "brainmaster"
path = "src/lib.rs"

[[bin]]
name = "brainmaster"
path = "src/main.rs"

[[bin]]
name = "brainmaster-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
# Dynamic loading of bmrcm.dll (Windows only, optional)
libloading = "0.8"

# Cross-platform serial port
serialport = "4"

# Error handling
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# TUI (optional)
ratatui = { version = "0.30", features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
